# openapi/manager/openapi.yaml
@@ -2240,6 +2240,10 @@ components:
           minimum: 0
         name:
           type: string
+        network_id:
+          type: string
+          format: uuid
+          nullable: true
         password:
           type: string
           nullable: true
